--- a/cripto-react/src/components/Footer.css
+++ b/cripto-react/src/components/Footer.css
@@ -1,60 +1,93 @@
-/* Footer */
-  .footer {
-    background-color: #1b191948;
-    color: #fff;
-  }
-  
-  .footerInfo {
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-  .footerInfo .logo {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
+.footer {
 
-  .detalhes {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-
-  .detalhes a{
-    color: #fff;
-    text-decoration: none;
-    padding: 20px;
-  }
-  
-  .redesSociais{
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    gap: 12px;
-  }
-
-  .redesSociais a {
-    padding: 5px;
-  }
-.copy {
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    gap: 60px; 
-    margin-top: 20px;
-    margin-right: 60px;
-    font-size: 14px;
+  background: rgba(255, 255, 255, 0.023);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.215);
+  color: #f0f0f0;
+  padding: 40px 20px 20px;
+  font-family: sans-serif;
 }
 
-.copyT {
-    color: #fff;
-    margin: 0;
+.footerContent {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px;
+  max-width: 1200px;
+  margin: 0 auto;
+  border-bottom: 1px solid #444;
+  padding-bottom: 30px;
 }
 
-.copy a { 
-    color: #fff;
-    text-decoration: none;
-    white-space: nowrap; 
+.footerBrand {
+  flex: 1;
+  min-width: 250px;
+}
+
+.footerBrand h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.footerBrand .tagline {
+  font-size: 16px;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.contact p {
+  margin: 4px 0;
+  color: #ffffffc3;
+}
+
+.footerSocial {
+  flex: 1;
+  min-width: 200px;
+}
+
+.footerSocial h3 {
+  margin-bottom: 12px;
+}
+
+.socialIcons {
+  display: flex;
+  gap: 15px;
+}
+
+.socialIcons img {
+  width: 20px;
+  transition: transform 0.3s ease;
+}
+
+.socialIcons img:hover {
+  transform: scale(2.0);
+  filter: drop-shadow(0 0 10px #a855f7);
+}
+
+.socialIcons a:hover img {
+  transform: scale(1.1);
+}
+
+.footerBottom {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  font-size: 14px;
+  max-width: 1200px;
+  margin-inline: auto
+}
+
+.footerBottom p {
+  color: #fff;
+}
+
+.footerBottom a {
+  color: #a174f0;
+  text-decoration: none;
+}
+
+.footerBottom a:hover {
+  text-decoration: underline;
 }
