--- a/cripto-react/src/components/privacidade.css
+++ b/cripto-react/src/components/privacidade.css
@@ -4,7 +4,7 @@
     margin: 2rem auto;
     padding: 2rem;
     font-family: 'Segoe UI', Arial, sans-serif;
-    background-color: #ffffff0c;
+    background-color: transparent;
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.08);
   }
