--- a/cripto-react/src/pages/ForgotPassword.css
+++ b/cripto-react/src/pages/ForgotPassword.css
@@ -11,35 +11,38 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f5f5f5;
+  background-color: transparent;
   padding: 20px;
 }
 
 .forgot-password-box {
   max-width: 700px;
   width: 100%;
-  background-color: white;
+  background-color: transparent;
   padding: 40px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+
+
 .forgot-password-header p{
   text-align: center;
   margin-bottom: 30px;
   margin-right: 120px;
+
 }
 
 .forgot-password-header h1 {
   font-size: 34px;
-  color: #333;
+  color: #ffffff;
   margin-bottom: 10px;
   text-align: center;
 }
 
 .forgot-password-header p {
   font-size: 20px;
-  color: #666;
+  color: #ffffff;
 }
 
 .forgot-password-form {
@@ -54,8 +57,12 @@
   display: block;
   font-size: 18px;
   font-weight: 600;
-  color: #333;
+  color: #fff;
   margin-bottom: 8px;
+}
+
+label {
+  color: #fff;
 }
 
 .form-group input {
@@ -76,10 +83,9 @@
   width: 100%;
   height: 50px;
   padding: 12px;
-  background-color: #0066ff;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   font-size: 20px;
   font-weight: 600;
   cursor: pointer;
@@ -90,9 +96,6 @@
   gap: 8px;
 }
 
-.submit-button:hover {
-  background-color: #0052cc;
-}
 
 .submit-button:disabled {
   background-color: #cccccc;
@@ -129,4 +132,15 @@
 .message.error {
   background-color: #ffeef0;
   color: #cb2431;
+}
+
+form {
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.049);
+    border-radius: 20px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+    padding: 60px;
+    max-width: 600px;
+    width: 100%;
+    text-align: center;
 }
