atualizando reset password

--- a/cripto-react/src/pages/ForgotPassword.css
+++ b/cripto-react/src/pages/ForgotPassword.css
@@ -26,11 +26,12 @@
 
 
 
-.forgot-password-header p{
-  text-align: center;
+.forgot-password-header p {
+  align-items: center;
   margin-bottom: 30px;
-  margin-right: 120px;
-
+  font-size: 20px;
+  color: #ffffff;
+  margin-left: 1.5%;
 }
 
 .forgot-password-header h1 {
@@ -40,14 +41,6 @@
   text-align: center;
 }
 
-.forgot-password-header p {
-  font-size: 20px;
-  color: #ffffff;
-}
-
-.forgot-password-form {
-    margin-left: 30px;
-}
 
 .form-group {
   margin-bottom: 20px;
@@ -84,8 +77,6 @@ label {
   height: 50px;
   padding: 12px;
   color: white;
-  border: none;
-  border-radius: 20px;
   font-size: 20px;
   font-weight: 600;
   cursor: pointer;
@@ -94,6 +85,7 @@ label {
   align-items: center;
   justify-content: center;
   gap: 8px;
+  background: linear-gradient(90deg, #732d91, #8e44ad);
 }
 
 
@@ -132,15 +124,4 @@ label {
 .message.error {
   background-color: #ffeef0;
   color: #cb2431;
-}
-
-form {
-    backdrop-filter: blur(20px);
-    background: rgba(255, 255, 255, 0.049);
-    border-radius: 20px;
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-    padding: 60px;
-    max-width: 600px;
-    width: 100%;
-    text-align: center;
 }
