--- a/cripto-react/src/pages/LessonPage.module.css
+++ b/cripto-react/src/pages/LessonPage.module.css
@@ -1,4 +1,3 @@
-
 .page {
   min-height: 100vh;
   background-color: #f5f7fa;
@@ -10,21 +9,23 @@
 }
 
 .header {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 20px;
-  text-align: center;
 }
 
-.voltarHome{
-    cursor: pointer;
-  }
-
-  .voltarHome img {
-    margin-top: 20px;
-    margin-left: 25px;
-    width: 110px;
-    height: 70px;
-  }
-
+.backArrow {
+  position: absolute;
+  left: 20px;
+  font-size: 24px;
+  color: #ffffff;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
 
 .title a {
   font-size: 2.5rem;
@@ -128,10 +129,3 @@
   background-color: #590e56;
 }
 
- .backArrow {
-    font-size: 24px;
-    color: #ffffff;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out;
-    margin-right: 60px;
-  }
