--- a/cripto-react/src/pages/Home.css
+++ b/cripto-react/src/pages/Home.css
@@ -77,22 +77,42 @@ body {
 }
 
 .content h1 {
-  font-size: 90px;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 1.2;
+    color: #e4dfdfeb;
+  margin-bottom: 30px;
+  /*
+  font-size: 75px;
   color: #e4dfdfeb;
   margin-bottom: 40px;
-  text-align: center;
+  text-align: center;*/
 }
 
 .content p {
+  font-size: 35px;
+  color: #d0d0d0;
+  margin-bottom: 40px;
+  /*
   font-size: 40px;
   color: #e4dfdfeb;
-  text-align: center;
+  text-align: center;*/
 }
 
 .corrente-image {
-  animation: wave 4s ease-in-out infinite;
+  animation: float 6s ease-in-out infinite;
+  /*animation: wave 4s ease-in-out infinite;*/
 }
 
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+/*
 @keyframes wave {
   0% {
     transform: translate(0, 0);
@@ -114,7 +134,7 @@ body {
     transform: translate(0, 0);
   }
 }
-
+*/
 
 /* Frase Inspiradora */
 .frase {
@@ -174,6 +194,7 @@ body {
     opacity: 0;
     transform: translateX(-2000px);
   }
+
   to {
     opacity: 1;
     transform: translateX(0);
