--- a/cripto-react/src/pages/LessonPage.module.css
+++ b/cripto-react/src/pages/LessonPage.module.css
@@ -63,13 +63,15 @@
 
 .videoContainer {
   flex: 1;
-  min-width: 560px;
+  min-width: 260px;
 }
 
-.videoContainer iframe {
-  width: 100%;
-  height: 315px;
-  border-radius: 8px;
+.videoContainer video {
+  width: 860px; /* ou 80%, depende do que você quer */
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
 
 .pdfContainer {
